fix overflow and key prop

--- a/app/public/styles/global.css
+++ b/app/public/styles/global.css
@@ -48,6 +48,12 @@ button, textarea, input, body {
     }
 }
 
+@media (max-width: 600px) {
+    body {
+        overflow-x: hidden;
+    }
+}
+
 button {
     cursor: pointer;
 }
